Added FS and Proofread

--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" />
+      <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -23,7 +24,7 @@
         <ul id="your-menu">
           <li><a class="hover-link orange" href="about.html">About</a></li>
           <li><a class="hover-link orange" href="work.html">Work</a></li>
-          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <!-- <li><a class="hover-link orange" href="contact.html">Writing</a></li> -->
           <li><a class="hover-link orange" href="index.html#contact">Contact</a></li>
           <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
@@ -44,18 +45,18 @@
         <div class="column">
           <img src="img/design.png" alt="Design" />
           <div class="about-section">
-            <p>I have an eye for design, along with a desire to create a website that is exactly what your visitor needs. Throughout the design process, there will be constant communication with you, eliminating wasted resources and pin pointing exactly what your website should contain. These days, a beautiful design is not all a website needs in order for your business to grow. It needs content to back the aesthetics. Together, we will get to the root of what valuable content you need, and make it speak volumes.  </p>
+            <p>I have an eye for design, along with a passion for showing you how a website can help fulfill your visitor's needs. Throughout the design process, I will include you in every step, eliminating wasted resources and pinpointing exactly what your website needs to maximize its potential. These days, a beautiful design is not all you need in order for your business to grow. It needs content to back the aesthetics. Together, we will get to the root of what valuable content you need, and make it speak volumes.</p>
           </div>
         </div>
         <div class="column">
           <img src="img/develop.png" alt="Develop" />
           <div class="about-section">
-            <p>Sometimes, there can be a disconnect between a designer's vision and the developer's end result. By hiring one person to do both, you can rest easy knowing that even the small details of the design will be executed in the final product. This is where your site will really transform from a pretty picture to an evolving, interactive experience for your visitors. Do you need a shop, contact forms, item inventory? This is where all of those things start truly coming to life. </p>
+            <p>Sometimes, there can be a disconnect between a designer's vision and the developer's end result. By hiring one person to do both, you can rest easy knowing that even the small details of the design will be executed exactly how you want. This is where your site will really transform from just a pretty face to an helpful, interactive experience for your visitors. Do you need a shop, contact forms, item inventory? This is where all of those things start truly coming to life. </p>
           </div>
         </div>
       </div>
       <div class="narrow-row">
-          <p>Let me design a website for you that will help take your business to the next level. I have a passion for design and for code. I feel that they are two sides of the same coin. But even more than that, I want to help you and work with you to come up with a solution for your business that is custom to you. Every business faces different challenges and has different goals. In the same way that your website should feel personal to your visitors, the process I take to build your website will be personal to you. Are you ready to take the next step for your business?</p>
+          <p>Let me design a website for you that will help take your business evolve. I have a passion for design and for code. They are two sides of the same coin. But even more than that, I want to help you and come up with a solution for your business that is custom tailored for it. Every business faces different challenges and has different goals. In the same way that your website should feel personal to your visitors, the process I take to build your website will be personal to you. Are you ready to take the next step for your business?</p>
       </div>
     </div>
 
