--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" />
+      <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -23,7 +24,7 @@
         <ul id="your-menu">
           <li><a class="hover-link orange" href="about.html">About</a></li>
           <li><a class="hover-link orange" href="work.html">Work</a></li>
-          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <!-- <li><a class="hover-link orange" href="contact.html">Writing</a></li> -->
           <li><a class="hover-link orange" href="index.html#contact">Contact</a></li>
           <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
@@ -43,14 +44,14 @@
 
     <div id="work-container">
       <div class="row">
-        <a href="work/homecoming.html">
+        <a href="work/future.html">
           <div class="column">
-            <img src="img/homecoming/hc_place.jpg" alt="SELU Homecoming Site" />
+            <img src="img/future/fs_place.jpg" alt="SELU Future Students Site" />
             <div class="work-overview">
-              <p class="work-title">Southeastern Homecoming Site</p>
-              <p class="work-spec">Web Design, Logo<br />
+              <p class="work-title">Southeastern Future Students</p>
+              <p class="work-spec">Web Design, Iconography, CSS<br />
                 2015</p>
-              <p class="work-desc">A website created for Southeastern University's annual Homecoming week.</p>
+              <p class="work-desc">A website created for students trying to decide if Southeastern is right for them.</p>
             </div>
           </div>
         </a>
@@ -70,7 +71,7 @@
       <button class="btn" id="work"><a class="line-link" href="work.html">See All Work</a></button>
     </div>
 
-    <div id="write-container">
+    <!-- <div id="write-container">
       <div id="inner-write">
         <div class="row" id="selu-homecoming">
           <div class="column">
@@ -93,12 +94,12 @@
         </div>
       </div>
       <button class="btn" id="work"><a class="line-link" href="work.html">See All Articles</a></button>
-    </div>
+    </div> -->
 
     <a name="contact"></a>
     <div id="contact-container">
       <div class="narrow-row">
-        <p >Do you have a project that you need help with? Is your website not living up to its full potential? I would love to work with you to maximize your business's web presence! </p>
+        <p >Have a project that you need help with? Is your website not living up to its full potential? I would be thrilled to work with you. Shoot me an email. I'd love to work with you!</p>
       </div>
 
         <h4><span>Contact</span> me@ryanngreen.com</h4>
