--- a/work/homecoming.html
+++ b/work/homecoming.html
@@ -12,13 +12,18 @@
   .highlight-page.homecoming #head-container {
     background: #42a06c;
   }
+
+  .highlight-page .services span {
+    color: #42a06c;
+  }
   </style>
 </head>
 
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="../index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" />
+      <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -29,7 +34,7 @@
         <ul id="your-menu">
           <li><a class="hover-link orange" href="../about.html">About</a></li>
           <li><a class="hover-link orange" href="../work.html">Work</a></li>
-          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <!-- <li><a class="hover-link orange" href="contact.html">Writing</a></li> -->
           <li><a class="hover-link orange" href="../index.html#contact">Contact</a></li>
           <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
@@ -41,7 +46,7 @@
     <div id="head-container">
       <div id="head-info">
         <h1>Homecoming Site</h1>
-        <p>Previously, SELU created a new sub-site each year that was specific to that year's Homecoming theme. This meant each year they were repeating the same process and essentially creating a time drain. Instead, we decided to create a site that would remain consistent, providing a recognizable look, with exchangable pieces for the theme. </p>
+        <p>Previously, Southeastern University created a new sub-site each year that was specific to that year's Homecoming theme. This meant each year they were repeating the same process and essentially creating a time drain. Instead, we decided to create a site that would remain consistent every year, providing a recognizable look, with exchangable pieces for the theme. </p>
       </div>
 
       <img src="../img/homecoming/hc_mock.png" alt="Homecoming Responsive" />
@@ -49,9 +54,11 @@
 
     <div id="pages-container">
       <div class="highlight-header">
+        <button class="btn no-margin"><a class="line-link" href="http://www.southeastern.edu/news_media/events/homecoming/">Visit Site</a></button>
         <h2>Homecoming Homepage</h2>
-        <p>Most important information is housed on the main page. It serves as the hub for any information someone might be looking for about SELU's Homecoming week and activities. As this is a site that will be live long before Homecoming week, a countdown was extremely important, as well as information about when Homecoming week is, what the theme is, and who is sponsoring it. The semester football schedule can also be found, as well as a photo stream from the previous Homecoming.</p>
-        <p>The other major page included in the new Homecoming site is the events page. Separated by day and updated for the current day of Homecoming week, each day's activities are easy to look over.</p>
+        <p class="services"><span>Services</span> Web Design, Logo Design</p>
+        <p>The most important information is housed on the main page. It serves as the hub for any information someone might be looking for about Southeastern's Homecoming week and activities. As this is a site that will be live long before Homecoming week, a countdown was extremely important, as well as information about when Homecoming week is, what the theme is, and who is sponsoring it. The semester football schedule can also be found, as well as a photo stream from the previous Homecoming.</p>
+        <p>The other major page included in the new Homecoming site is the events page. Each day is separated in tabs and updated for the current day of Homecoming week. In addition to being organized by day, each day's activities are easy to look over with a header for times and a description of events.</p>
       </div>
       <img src="../img/homecoming/hc_feat.jpg" alt="Homecoming Home Page" />
 
@@ -75,7 +82,7 @@
     <div id="work-navigation">
       <p><a class="hover-link orange" href="warmth.html">Previous</a></p>
 
-      <p><a class="hover-link orange" href="timeless.html">Next</a></p>
+      <p><a class="hover-link orange" href="future.html">Next</a></p>
     </div>
 
     <a name="social"></a>
