--- a/work/timeless.html
+++ b/work/timeless.html
@@ -12,13 +12,18 @@
   .highlight-page.homecoming #head-container {
     background: #f8c19d;
   }
+
+  .highlight-page .services span {
+    color: #f8c19d;
+  }
   </style>
 </head>
 
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="../index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" />
+      <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -29,7 +34,7 @@
         <ul id="your-menu">
           <li><a class="hover-link orange" href="../about.html">About</a></li>
           <li><a class="hover-link orange" href="../work.html">Work</a></li>
-          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <!-- <li><a class="hover-link orange" href="contact.html">Writing</a></li> -->
           <li><a class="hover-link orange" href="../index.html#contact">Contact</a></li>
           <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
@@ -41,7 +46,7 @@
     <div id="head-container">
       <div id="head-info">
         <h1 class="two-line-header">Timeless <br/> Vintage Rentals</h1>
-        <p>As a modern business, it is extremely to have not only a website, but a website that looks professional and beautiful on any device. This was especially true for Timeless Vintage Rentals, who's website was not mobile friendly and was starting to look dated.</p>
+        <p>As a modern business, it is extremely important to have not only a website, but a website that looks professional and beautiful on any device. This was especially true for Timeless Vintage Rentals, whose website was not mobile friendly and needed some tlc.</p>
       </div>
 
       <img src="../img/timeless/tv_mock.png" alt="Timeless Vintage Responsive" />
@@ -49,8 +54,10 @@
 
     <div id="pages-container">
       <div class="highlight-header">
+        <button class="btn no-margin"><a class="line-link" href="http://development.ryanngreen.com">Visit Site</a></button>
         <h2>Timeless Vintage Desktop</h2>
-        <p>The main visitor's coming to the Timeless Vintage Rental site are potential clients, mostly bride-to-be's. Keeping that in mind, I decided the inventory would be the prime focus of the site, while also showcasing beautiful wedding shots that Timeless Vintage has been featured in. The use of black and white keeps the style unopposing, and allowing color to pop through when the visitor hovers over the section they are interested in, showing them more and drawing them in.</p>
+        <p class="services"><span>Services</span> Web Design, Logo Design, HTML, CSS, PHP</p>
+        <p>The main visitors coming to the Timeless Vintage Rental site are potential clients, mostly bride-to-be's. Keeping that in mind, I decided the inventory should be the prime focus of the site, while also showcasing beautiful wedding shots that Timeless Vintage has been featured in. The use of black and white keeps the style unopposing, as well as keeping it looking consistent, and allowing color to pop through when the visitor hovers over the inventory, showing them more and drawing them in.</p>
       </div>
       <img src="../img/timeless/tv_desk_home.jpg" alt="Timeless Vintage Home Page" />
 
@@ -60,7 +67,7 @@
 
       <div class="highlight-header">
         <h2>Responsive</h2>
-        <p>From the beginning of the project, it was clear that it would be extremely important that the Timeless Vintage site would be optimized for viewing on multiple devices. As such, the website changes fluidly between any size, making sure that no matter what size screen her visitor's are using, they are getting the best experience.</p>
+        <p>From the beginning of the project, it was clear that it would be extremely important that the Timeless Vintage site would be optimized for viewing on any device. As such, the website changes fluidly between any size, making sure that no matter what size screen her visitor's are using, they are getting the best experience.</p>
       </div>
 
       <img class="device" src="../img/timeless/tv_tablet.jpg" alt="Timeless Vintage Item View" />
@@ -83,7 +90,7 @@
     </div>
 
     <div id="work-navigation">
-      <p><a class="hover-link orange" href="homecoming.html">Previous</a></p>
+      <p><a class="hover-link orange" href="future.html">Previous</a></p>
 
       <p><a class="hover-link orange" href="warmth.html">Next</a></p>
     </div>
