--- a/work/warmth.html
+++ b/work/warmth.html
@@ -13,13 +13,18 @@
     background: #7f2754;
     color: white;
   }
+
+  .highlight-page .services span {
+    color: #7f2754;
+  }
   </style>
 </head>
 
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="../index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" />
+      <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -30,7 +35,7 @@
         <ul id="your-menu">
           <li><a class="hover-link orange" href="../about.html">About</a></li>
           <li><a class="hover-link orange" href="../work.html">Work</a></li>
-          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <!-- <li><a class="hover-link orange" href="contact.html">Writing</a></li> -->
           <li><a class="hover-link orange" href="../index.html#contact">Contact</a></li>
           <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
@@ -42,7 +47,7 @@
     <div id="head-container">
       <div id="head-info">
         <h1>Warmth: Knitting</h1>
-        <p>This is a side project that I worked on. Knitting is a hobby of mine, but it's always frustrating to have to search across so many sites to find different information. I couldn't help but think how easy it would be if all the beginner information I needed was on one site. </p>
+        <p>This is a side project that I worked on in 2015. Knitting is a hobby of mine, but it's always frustrating to have to search across so many sites to find different information. I couldn't help but think how easy it would be if all the beginner information I needed was on one site. </p>
       </div>
 
       <img src="../img/warmth/wm_mock.png" alt="Homecoming Responsive" />
@@ -51,8 +56,9 @@
     <div id="pages-container">
       <div class="highlight-header">
         <h2>Warmth Pages</h2>
-        <p>The project started with the idea of knitting and what this site/brand could be called. I settled on the logo fairly quickly from there, using the most basic knitting stitch for the logo mark and a calm, relaxed color palette.</p>
-        <p>I decided to make a homepage have multiple calls-to-action so that the visitor would be more likely to stay on the site and click through to an interior page. The subpages include many sources for information that a beginner knitter might be looking for like different end results they can make while practicing, tutorials on basic stitches and materials, as well as benefits to knitting for people who may be on the fence.</p>
+        <p class="services"><span>Services</span> Logo Design, Web Design, Photography, HTML, CSS</p>
+        <p>The project started with the idea of knitting and what this site/brand could be called. I settled on the logo fairly quickly from there, using the most basic knitting stitch for the logo mark and a calm, relaxed color palette. The typeface was altered to add a bit of flair and to mimic yarn.</p>
+        <p>I decided to make a homepage with multiple calls-to-action for each section so that the visitor would be more likely to stay on the site and click through to an interior page. The subpages include many sources for information that a beginner knitter might be looking for like different end results they can make while practicing, information on basic stitches and materials, as well as benefits to knitting for people who may be on the fence. Each call to action header is focused on the main goal of the site &ndash; learning &ndash; as well as focusing on its main visitor group &ndash; beginners.</p>
       </div>
       <img src="../img/warmth/wm_home.jpg" alt="Warmth Home Page" />
 
