--- a/work.html
+++ b/work.html
@@ -18,7 +18,8 @@
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" />
+      <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -29,7 +30,7 @@
         <ul id="your-menu">
           <li><a class="hover-link orange" href="about.html">About</a></li>
           <li><a class="hover-link orange" href="work.html">Work</a></li>
-          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <!-- <li><a class="hover-link orange" href="contact.html">Writing</a></li> -->
           <li><a class="hover-link orange" href="index.html#contact">Contact</a></li>
           <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
@@ -41,20 +42,20 @@
     <div id="head-container" class="pink-back">
       <div id="head-info">
         <h1>Collected Works</h1>
-        <p>I specialize in creating websites for small businesses that are looking to increase their business and improve their online presence. Over the last few years I have worked on a variety of web projects, ranging from solely design, front-end coding, and even creating dynamic sites. </p>
+        <p>I create websites for small businesses looking to improve their business and increase their online presence. Over the last few years I have worked on a variety of web projects, ranging from solely design, to front-end coding, to creating more dynamic sites. </p>
       </div>
     </div>
 
     <div id="work-container">
       <div class="row">
-        <a href="work/homecoming.html">
+        <a href="work/future.html">
           <div class="column">
-            <img src="img/homecoming/hc_place.jpg" alt="SELU Homecoming Site" />
+            <img src="img/future/fs_place.jpg" alt="SELU Future Students Site" />
             <div class="work-overview">
-              <p class="work-title">Southeastern Homecoming Site</p>
-              <p class="work-spec">Web Design, Logo<br />
+              <p class="work-title">Southeastern Future Students</p>
+              <p class="work-spec">Web Design, Iconography, CSS<br />
                 2015</p>
-              <p class="work-desc">A website created for Southeastern University's annual Homecoming week.</p>
+              <p class="work-desc">A website created for students trying to decide if Southeastern is right for them.</p>
             </div>
           </div>
         </a>
@@ -81,17 +82,31 @@
             </div>
           </div>
         </a>
-        <!-- <a href="homecoming.html"> -->
+        <a href="work/homecoming.html">
+          <div class="column">
+            <img src="img/homecoming/hc_place.jpg" alt="SELU Homecoming Site" />
+            <div class="work-overview">
+              <p class="work-title">Southeastern Homecoming Site</p>
+              <p class="work-spec">Web Design, Logo<br />
+                2015</p>
+              <p class="work-desc">A website created for Southeastern University's annual Homecoming week.</p>
+            </div>
+          </div>
+        </a>
+
+        <!--  FOR A BLANK SPOT ON THE WORK PAGE!!!
+
+        <a href="homecoming.html">
           <div class="column filler">
             <img src="img/placeholder.png" alt="Placeholder" />
-            <!-- <div class="work-overview">
+            <div class="work-overview">
               <p class="work-title">Southeastern Alumni Site</p>
               <p class="work-spec">Web Design, HTML, CSS <br />
               2015</p>
               <p class="work-desc">A brief description of the project scope and requirements.</p>
-            </div> -->
+            </div>
           </div>
-        <!-- </a> -->
+        </a> -->
       </div>
     </div>
 
