--- a/work/future.html
+++ b/work/future.html
@@ -22,7 +22,7 @@
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" />
+      <a href="../index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" />
       <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
@@ -45,7 +45,7 @@
   <div id="main-page" class="highlight-page future">
     <div id="head-container">
       <div id="head-info">
-        <h1 class="two-line-header">Southeastern's <br /> Future Students</h1>
+        <h1>Future Students</h1>
         <p>In Fall of 2015, Southeastern began a new marketing campaign for potential students. It started with a large print collection of brochures, forms, etc. In order to give these students a consistent experience from start to finish, I was tasked with designing a sub-site under Southeastern for these "future students" that would tie back to the marketing materials.</p>
       </div>
 
