--- a/work/warmth.html
+++ b/work/warmth.html
@@ -23,7 +23,7 @@
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" />
+      <a href="../index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" />
       <p>Ryann <br/> Green</p></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
