Added resume, favicon

--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <link rel="icon" href="favicon.ico">
   <title>Ryann Green | Web Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -55,10 +56,11 @@
               <p class="work-title">Southeastern Future Students</p>
               <p class="work-spec">Web Design, Iconography, CSS<br />
                 2015</p>
-              <p class="work-desc">A website created for students trying to decide if Southeastern is right for them.</p>
+              <p class="work-desc">A website created for students deciding if Southeastern is right for them.</p>
             </div>
           </div>
         </a>
+
         <a href="work/timeless.html">
           <div class="column">
             <img src="img/timeless/tv_place.jpg" alt="Timeless Vintage Rentals Site" />
@@ -69,6 +71,7 @@
               <p class="work-desc">Brand and website redesign for a local wedding rental business.</p>
             </div>
           </div>
+        </a>
       </div>
       <div class="row">
         <a href="work/warmth.html">
