--- a/work/future.html
+++ b/work/future.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <link rel="icon" href="../favicon.ico">
   <title>Ryann Green | Web Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -54,7 +55,7 @@
 
     <div id="pages-container">
       <div class="highlight-header">
-        <button class="btn no-margin"><a class="line-link" href="http://www.southeastern.edu/future_students/explore/">Visit Site</a></button>
+        <div class="btn no-bot-margin orange-back"><a class="line-link" href="http://www.southeastern.edu/future_students/explore/">Visit Site</a></div>
         <h2>Future Students Desktop</h2>
         <p class="services"><span>Services</span> Web Design, Iconography, CSS</p>
         <p>The color and type treatment for the site were influenced by the print materials. The typeface, Korolev, was used there. I decided to continue using these bold headings with tight line spacing and a hint of color throughout. I also decided to take the opportunity to evoke a sense of layering and depth with them by removing the headings from the box of color containing the content. The color palette was also inspired by print, though I chose to use a lower opacity to allow the photos to remain visible. The main pages are very image-centric, and they are all real photos from Southeastern's campus. This gives visitors a sense of authenticity that can be lacking in stock photography or flat designs. </p>
