--- a/work/homecoming.html
+++ b/work/homecoming.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <link rel="icon" href="../favicon.ico">
   <title>Ryann Green | Web Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -54,7 +55,7 @@
 
     <div id="pages-container">
       <div class="highlight-header">
-        <button class="btn no-margin"><a class="line-link" href="http://www.southeastern.edu/news_media/events/homecoming/">Visit Site</a></button>
+        <div class="btn no-bot-margin orange-back"><a class="line-link" href="http://www.southeastern.edu/news_media/events/homecoming/">Visit Site</a></div>
         <h2>Homecoming Homepage</h2>
         <p class="services"><span>Services</span> Web Design, Logo Design</p>
         <p>The most important information is housed on the main page. It serves as the hub for any information someone might be looking for about Southeastern's Homecoming week and activities. As this is a site that will be live long before Homecoming week, a countdown was extremely important, as well as information about when Homecoming week is, what the theme is, and who is sponsoring it. The semester football schedule can also be found, as well as a photo stream from the previous Homecoming.</p>
