--- a/work/timeless.html
+++ b/work/timeless.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <link rel="icon" href="../favicon.ico">
   <title>Ryann Green | Web Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -54,7 +55,7 @@
 
     <div id="pages-container">
       <div class="highlight-header">
-        <button class="btn no-margin"><a class="line-link" href="http://development.ryanngreen.com">Visit Site</a></button>
+        <div class="btn no-bot-margin orange-back"><a class="line-link" href="http://development.ryanngreen.com">Visit Site</a></div>
         <h2>Timeless Vintage Desktop</h2>
         <p class="services"><span>Services</span> Web Design, Logo Design, HTML, CSS, PHP</p>
         <p>The main visitors coming to the Timeless Vintage Rental site are potential clients, mostly bride-to-be's. Keeping that in mind, I decided the inventory should be the prime focus of the site, while also showcasing beautiful wedding shots that Timeless Vintage has been featured in. The use of black and white keeps the style unopposing, as well as keeping it looking consistent, and allowing color to pop through when the visitor hovers over the inventory, showing them more and drawing them in.</p>
