--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <link rel="icon" href="favicon.ico">
   <title>Ryann Green | Web Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,10 +34,12 @@
   </div>
 
   <div id="main-page" class="about-page">
-    <div id="head-container" class="yellow-back">
+    <div id="head-container" class="orange-back">
       <div id="head-info">
         <h1>Nice to Meet You</h1>
-        <p>Running a business is a busy job, and as important as the web is for your success, it can be complicated and time consuming. That's what I'm here for. I can design and code your website, so that you can make less stops and get better results.</p>
+        <p style="padding-bottom: 10px">Running a business is a busy job, and as important as the web is for your success, it can be complicated and time consuming. That's what I'm here for. I can design and code your website, so that you can make less stops and get better results.</p>
+
+        <div class="btn white-back" id="work"><a class="line-link" href="img/resume.pdf">Resume</a></div>
       </div>
     </div>
 
