--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <link rel="icon" href="favicon.ico">
   <title>Ryann Green | Web Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -33,12 +34,12 @@
   </div>
 
   <div id="main-page" class="home-page">
-    <div id="head-container" class="orange-back">
+    <div id="head-container" class="yellow-back">
       <div id="head-info">
         <h1>Design + Develop</h1>
-        <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+        <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in helping small businesses provide their clients with easily accessible and friendly experiences.</p>
 
-        <button class="btn" id="work"><a class="line-link" href="about.html">About Me</a></button>
+        <div class="btn orange-back" id="work"><a class="line-link" href="about.html">About Me</a></div>
       </div>
     </div>
 
@@ -51,7 +52,7 @@
               <p class="work-title">Southeastern Future Students</p>
               <p class="work-spec">Web Design, Iconography, CSS<br />
                 2015</p>
-              <p class="work-desc">A website created for students trying to decide if Southeastern is right for them.</p>
+              <p class="work-desc">A website created for students deciding if Southeastern is right for them.</p>
             </div>
           </div>
         </a>
@@ -68,7 +69,7 @@
         </a>
       </div>
 
-      <button class="btn" id="work"><a class="line-link" href="work.html">See All Work</a></button>
+      <div class="btn" id="work"><a class="line-link" href="work.html">See All Work</a></div>
     </div>
 
     <!-- <div id="write-container">
@@ -93,13 +94,13 @@
           </div>
         </div>
       </div>
-      <button class="btn" id="work"><a class="line-link" href="work.html">See All Articles</a></button>
+      <div class="btn" id="work"><a class="line-link" href="work.html">See All Articles</a></div>
     </div> -->
 
     <a name="contact"></a>
     <div id="contact-container">
       <div class="narrow-row">
-        <p >Have a project that you need help with? Is your website not living up to its full potential? I would be thrilled to work with you. Shoot me an email. I'd love to work with you!</p>
+        <p >Have a project that you need help with? Is your website not living up to its full potential? I would be thrilled to work with you. Shoot me an email and let's discuss how I can help.</p>
       </div>
 
         <h4><span>Contact</span> me@ryanngreen.com</h4>
