Added UTF and meta descriptions

--- a/about.html
+++ b/about.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <head>
+  <meta charset="UTF-8">
   <link rel="icon" href="favicon.ico">
   <title>Ryann Green | Web Design</title>
+  <meta name="description" content=" I'm Ryann Green, a graphic designer based in Baton Rouge, Louisiana. I specialize in designing and developing for the web. If you'd like to learn more about my process, you've come to the right place.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
@@ -83,7 +85,7 @@
         </div>
       </div>
       <div class="narrow-row">
-          <p>Let me design a website for you that will help take your business evolve. I have a passion for design and for code. They are two sides of the same coin. But even more than that, I want to help you and come up with a solution for your business that is custom tailored for it. Every business faces different challenges and has different goals. In the same way that your website should feel personal to your visitors, the process I take to build your website will be personal to you. Are you ready to take the next step for your business?</p>
+          <p>Let me design a website for you that will help your business evolve. I have a passion for design and for code. They are two sides of the same coin. But even more than that, I want to help you and come up with a solution for your business that is custom tailored for it. Every business faces different challenges and has different goals. In the same way that your website should feel personal to your visitors, the process I take to build your website will be personal to you. Are you ready to take the next step for your business?</p>
       </div>
     </div>
 
