--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <head>
+  <meta charset="UTF-8">
   <link rel="icon" href="favicon.ico">
   <title>Ryann Green | Web Design</title>
+  <meta name="description" content=" I'm Ryann Green, a graphic designer based in Baton Rouge, Louisiana. I specialize in designing and developing for the web. Helping small businesses provide their clients with functional and user-friendly websites is what I work hard to do for you.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
@@ -62,7 +64,7 @@
         <h1>Design + Develop</h1>
         <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in helping small businesses provide their clients with easily accessible and friendly experiences.</p>
 
-        <div class="btn orange-back" id="work"><a class="line-link" href="about.html">About Me</a></div>
+        <div class="btn orange-back"><a class="line-link" href="about.html">About Me</a></div>
       </div>
     </div>
 
@@ -92,7 +94,7 @@
         </a>
       </div>
 
-      <div class="btn" id="work"><a class="line-link" href="work.html">See All Work</a></div>
+      <div class="btn"><a class="line-link" href="work.html">See All Work</a></div>
     </div>
 
     <!-- <div id="write-container">
