--- a/work.html
+++ b/work.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <head>
+  <meta charset="UTF-8">
   <link rel="icon" href="favicon.ico">
   <title>Ryann Green | Web Design</title>
+  <meta name="description" content=" I'm Ryann Green, a graphic designer based in Baton Rouge, Louisiana. I specialize in designing and developing for the web. Take a look at my recent work, and when you're ready, I look forward to talking to you. ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
