--- a/work/timeless.html
+++ b/work/timeless.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 
 <head>
-  <link rel="icon" href="../favicon.ico">
+  <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico">
   <title>Ryann Green | Web Design</title>
+  <meta name="description" content=" I'm Ryann Green, a graphic designer based in Baton Rouge, Louisiana. I specialize in designing and developing for the web. This site was created for a wedding rental business located in South Louisiana. ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
