Fixed error with image display block

--- a/work/future.html
+++ b/work/future.html
@@ -102,9 +102,9 @@
         <p>Like the rest of Southeastern's website, the Future Students site was made to be responsive. The main difference is that the headers get less complex, allowing the content to be the focus. However, content that was previously hidden behind hover states is shown by default on mobile and tablet sizes as well, so that the visitors will not lose out on any important information, no matter what device they are using. </p>
       </div>
 
-      <img class="device" src="../img/future/fs_tablet.jpg" alt="Future Students Tablet" />
+      <img class="device inline" src="../img/future/fs_tablet.jpg" alt="Future Students Tablet" />
 
-      <img class="device" src="../img/future/fs_mobile.png" alt="Future Students Mobile" />
+      <img class="device inline" src="../img/future/fs_mobile.png" alt="Future Students Mobile" />
 
       <div class="highlight-header">
         <h2>Custom Buttons and Iconography</h2>
@@ -113,9 +113,9 @@
         <p>It was also decided that it would be beneficial to create a button for the main site to link to the Future Students site. In initial iterations, this button was difficult to tell if it could be clicked or not, so I chose to use a more traditionally styled button within, leading the visitors to click through.</p>
       </div>
 
-      <img class="device" src="../img/future/fs_btn_left.png" alt="Buttons for the Admitted Students Page" />
+      <img class="device inline" src="../img/future/fs_btn_left.png" alt="Buttons for the Admitted Students Page" />
 
-      <img class="device" src="../img/future/fs_btn_right.png" alt="Buttons for the Meet Our Students Page" />
+      <img class="device inline" src="../img/future/fs_btn_right.png" alt="Buttons for the Meet Our Students Page" />
 
       <br />
 
