--- a/work/timeless.html
+++ b/work/timeless.html
@@ -96,9 +96,9 @@
         <p>From the beginning of the project, it was clear that it would be extremely important that the Timeless Vintage site would be optimized for viewing on any device. As such, the website changes fluidly between any size, making sure that no matter what size screen her visitor's are using, they are getting the best experience.</p>
       </div>
 
-      <img class="device" src="../img/timeless/tv_tablet.jpg" alt="Timeless Vintage Item View" />
+      <img class="device inline" src="../img/timeless/tv_tablet.jpg" alt="Timeless Vintage Item View" />
 
-      <img class="device" src="../img/timeless/tv_mobile.png" alt="Timeless Vintage Item View" />
+      <img class="device inline" src="../img/timeless/tv_mobile.png" alt="Timeless Vintage Item View" />
     </div>
 
     <div id="color-container">
